--- a/index.html
+++ b/index.html
@@ -2079,17 +2079,14 @@
     <div id="error" class="error" style="display:none;"></div>
     <svg width="0" height="0" style="position:absolute; left:-9999px; top:-9999px;" aria-hidden="true" focusable="false">
       <defs>
-        <!-- Approximation of provided MathCo logo (6-spoke asterisk, no horizontal spoke) -->
+        <!-- MathCo logo mark (6-spoke asterisk) -->
         <symbol id="mathco-logo" viewBox="0 0 120 120">
-          <g fill="none" stroke="#3b0a7a" stroke-width="18" stroke-linecap="round">
-            <path d="M60 12 L60 46" />
-            <path d="M60 74 L60 108" />
-            <path d="M27 30 L47 50" />
-            <path d="M93 30 L73 50" />
-            <path d="M27 90 L47 70" />
-            <path d="M93 90 L73 70" />
+          <g fill="none" stroke="#3b0a7a" stroke-width="20" stroke-linecap="round">
+            <!-- 3 lines through center => 6 spokes -->
+            <path d="M60 14 L60 106" />
+            <path d="M30 24 L90 96" />
+            <path d="M30 96 L90 24" />
           </g>
-          <circle cx="60" cy="60" r="10" fill="#3b0a7a"/>
         </symbol>
       </defs>
     </svg>
@@ -2966,7 +2963,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.12+20260208.1';
+    const APP_VERSION = 'v0.7.13+20260208.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
