--- a/index.html
+++ b/index.html
@@ -1399,8 +1399,8 @@
     }
 
     .brand-mark {
-      width: 30px;
-      height: 30px;
+      width: 28px;
+      height: 28px;
       flex: 0 0 auto;
     }
 
@@ -1490,7 +1490,7 @@
       margin: 0 0 10px;
     }
 
-    .auth-brand .brand-mark { width: 36px; height: 36px; }
+    .auth-brand .brand-mark { width: 34px; height: 34px; }
     .auth-brand .brand-name { font-size: 18px; }
 
     .auth-gate h2 {
@@ -2079,13 +2079,16 @@
     <div id="error" class="error" style="display:none;"></div>
     <svg width="0" height="0" style="position:absolute; left:-9999px; top:-9999px;" aria-hidden="true" focusable="false">
       <defs>
-        <!-- MathCo logo mark (6-spoke asterisk) -->
-        <symbol id="mathco-logo" viewBox="0 0 120 120">
-          <g fill="none" stroke="#3b0a7a" stroke-width="20" stroke-linecap="round">
-            <!-- 3 lines through center => 6 spokes -->
-            <path d="M60 14 L60 106" />
-            <path d="M30 24 L90 96" />
-            <path d="M30 96 L90 24" />
+        <!-- MathCo logo mark (exact geometry from provided asset) -->
+        <symbol id="mathco-logo" viewBox="0 0 256 256">
+          <rect width="256" height="256" fill="none"/>
+          <g fill="none" stroke="#14005f" stroke-linecap="round" stroke-width="24">
+            <path d="M128 12v78"/>
+            <path d="M18 70l58 32"/>
+            <path d="M238 70l-58 32"/>
+            <path d="M22 182l92-50"/>
+            <path d="M234 182l-92-50"/>
+            <path d="M128 244v-52"/>
           </g>
         </symbol>
       </defs>
@@ -2963,7 +2966,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.13+20260208.1';
+    const APP_VERSION = 'v0.7.14+20260208.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
